# methylartist

./: .gitignore  .readthedocs.yaml  1  LICENSE  README.md  log.text  log.txt  log2.text  methylartist  pyproject.toml  setup.py  tmnt
docs/: commands.rst  conf.py  index.rst  installation.rst
methylartist.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: copy_hp_ps.py  dss_2sample.r  meth_merge_haps.py  modbamdb.py  segstats.py
